--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ mkdocs-glightbox
 mkdocs-git-revision-date-localized-plugin
 mkdocs-awesome-pages-plugin
 mkdocs-minify-plugin
+git+https://github.com/Andre601/mkdocs-pagenav-generator
