new struct + invokeai pip only guide

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ mkdocs-git-revision-date-localized-plugin
 mkdocs-awesome-pages-plugin
 mkdocs-minify-plugin
 git+https://github.com/Andre601/mkdocs-pagenav-generator
+pillow
+cairosvg
