--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,11 +4,15 @@ repo_url: https://github.com/Dschogo/HowToStuff
 site_url: https://dschogo.github.io/HowToStuff/
 edit_uri: ""
 
+site_description: Docs for various Tipps and Tricks by Dschogo
+
+
+
 theme:
     name: material
     features:
         - navigation.instant
-        - navigation.tabs
+        # - navigation.tabs
         - navigation.indexes
         - toc.follow
         - search.highlight
@@ -16,7 +20,8 @@ theme:
         - search.share
         - search.suggest
         - navigation.top
-        - navigation.expand
+        # - navigation.expand
+        # - navigation.sections
     icon:
         repo: fontawesome/brands/github
         edit: material/file-document-edit-outline
@@ -28,6 +33,7 @@ theme:
               name: Switch to dark mode
         - media: "(prefers-color-scheme: dark)"
           scheme: slate
+          primary: purple
           toggle:
               icon: material/lightbulb-outline
               name: Switch to light mode
@@ -74,6 +80,8 @@ markdown_extensions:
           emoji_generator: !!python/name:materialx.emoji.to_svg
 
 plugins:
+    - social:
+        cards: true
     - search
     - awesome-pages:
           filename: .pages.yml
@@ -101,5 +109,19 @@ extra:
     analytics:
         provider: google
         property: G-WPH3YEW49B
+        feedback:
+            title: Was this page helpful?
+            ratings:
+                - icon: material/emoticon-happy-outline
+                  name: This page was helpful
+                  data: 1
+                  note: >-
+                      Thanks for your feedback!
+                - icon: material/emoticon-sad-outline
+                  name: This page could be improved
+                  data: 0
+                  note: >-
+                      Thanks for your feedback! Help us improve this page by
+                      using our <a href="..." target="_blank" rel="noopener">feedback form</a>.
 
 copyright: Copyright &copy; 2022 Dschogo
