--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ repo_url: https://github.com/Dschogo/HowToStuff
 site_url: https://dschogo.github.io/HowToStuff/
 edit_uri: ""
 
-site_description: Docs for various Tipps and Tricks by Dschogo
+site_description: Docs for various stuff by Dschogo
 
 
 
@@ -121,7 +121,6 @@ extra:
                   name: This page could be improved
                   data: 0
                   note: >-
-                      Thanks for your feedback! Help us improve this page by
-                      using our <a href="..." target="_blank" rel="noopener">feedback form</a>.
+                      Thanks for your feedback!
 
 copyright: Copyright &copy; 2022 Dschogo
